# lrupy

./: .python-version  Pipfile  README.md  pyproject.toml  tox.ini
src/lrupy/: __init__.py  lru.py
tests/: test_bench.py  test_lru.py
