[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lrupy"
description = "Simple LRU cache for Python."
version = "0.1.0"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "kasegao", email = "shimomura@hapis.k.u-tokyo.ac.jp"},
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.7"

[project.urls]
Source = "https://github.com/kasegao/lrupy"

[tool.setuptools]
package-dir = {"" = "src"}
